--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "formik": "^2.4.5",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -24,6 +25,7 @@
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "yup": "^1.3.3"
   }
 }
