--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "autoprefixer": "10.4.14",
     "axios": "^1.6.3",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
     "formik": "^2.4.5",
     "next": "13.4.6",
-    "postcss": "8.4.24",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
     "yup": "^1.3.3"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.6",
+    "postcss": "8.4.24",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.3"
   }
 }
