--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
+    "sharp": "^0.33.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
